# csvrender

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  runner.rs  template.rs
tests/: wordpress.rs
tests/data/: wp_pages.csv
tests/templates/: wordpress.md
